kubernetes/paseo/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: paseo
  labels:
    istio.io/dataplane-mode: ambient
